@@ -1,5 +1,5 @@
 c
-c $Id: esp_common.fh,v 1.5 1998-04-21 21:45:16 d3j191 Exp $
+c $Id: esp_common.fh,v 1.6 1998-06-15 18:20:13 d3j191 Exp $
 c
 c     esp_mpp : node and global array related variables
 c     -------------------------------------------------
@@ -27,8 +27,9 @@ c
       integer natoms,nbf,mgrid(3),mxgrid,ngrid,nset,nmo,nocc,nconst,ndim
       integer ncon,icon(2500),irest,niter,maxit,ihfree,ngto,ngfr,idump
       integer lfngrd,nf
+      real*8 factor,probe
       common/esp_atm/rcut,spac,xmin,xmax,charge,chgnuc,chgele,radius,
-     + rcon,resa,resb,toler,dipmom,rms,quamom,
+     + rcon,resa,resb,toler,dipmom,rms,quamom,factor,probe,
      + natoms,nbf,mgrid,mxgrid,ngrid,nset,nmo,nocc,nconst,ndim,
      + ncon,icon,irest,niter,maxit,ihfree,ngto,ngfr,idump,lfngrd,nf
 c
